# weather-data-provider

./: README.md  runtime_config.toml  spin.toml
api/: Cargo.toml  README.md
api/examples/: aemet.json  meteocat.json  meteoclimatic.json  mixed.json  openwindmap.json  weatherlink.json
api/src/: downloader.rs  lib.rs  measurements.rs
api/src/collectors/: aemet.rs  common.rs  meteocat.rs  meteoclimatic.rs  mod.rs  openwindmap.rs  weatherlink.rs
pbproxy/: Cargo.toml
pbproxy/examples/: loopback.elv
pbproxy/src/: lib.rs
ui/: Cargo.toml  README.md  TODO.md  index.html
ui/src/: config.rs  main.rs  utils.rs  weather.rs
ui/src/components/: config_dialog.rs  import_dialog.rs  message_dialog.rs  mod.rs  subtitle_line.rs  title_line.rs  weather_data_table.rs
