[package]
name = "weather-data-aggregator-api"
authors = ["Grzegorz Krason <grzegorz.krason@gmail.com>"]
description = "Agregates current weather data from multiple sources."
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
chrono = "0.4.41"
chrono-tz = "0.10.3"
encoding_rs = "0.8.35"
futures = "0.3.31"
log = "0.4.27"
querystring = "1.1.0"
regex = "1.11.1"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
simple_logger = "5.0.0"
spin-sdk = "3.1.0"

[workspace]
