[package]
name = "weather-data-aggregator-pbproxy"
authors = ["Grzegorz Krason <grzegorz.krason@gmail.com>"]
description = "Proxy for lesma.eu"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.1.0"
url = "2.5.4"
urlencoding = "2.1.3"

[workspace]
